dev_ws/log/build_2023-11-01_09-27-47/py_img_stream/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/media/sf_sdp_12_ws/dev_ws/install/py_img_stream/lib/python3.10/site-packages/py_img_stream/image_pub.py", line 19
    self.cam = cv2.VideoCapture(0,"drop"=1) 
                                  ^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?

